Fix overflow in body element

--- a/src/Chart/StockChart.scss
+++ b/src/Chart/StockChart.scss
@@ -2,5 +2,5 @@
   width: calc(100% - 250px);
   height: 100%;
   display: flex;
-  box-sizing: border-box;
+  position: relative;
 }
