--- a/src/SideBar/SideBar.scss
+++ b/src/SideBar/SideBar.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   padding: 0 8px;
-  box-sizing: border-box;
+  position: relative;
 
   .search-input-wrapper {
     margin-top: 8px;
@@ -12,6 +12,8 @@
     .search-input {
       width: 100px;
       margin-right: 8px;
+
+      border-width: 1px;
     }
   }
 }
